[gd_scene load_steps=6 format=3 uid="uid://b05mykmtotgyl"]

[ext_resource type="Script" uid="uid://db3dna0qysped" path="res://Entity/Player/player.gd" id="1_3ybdo"]
[ext_resource type="Script" uid="uid://de3x7ftve10td" path="res://Entity/Player/target_mob.gd" id="2_0s3jf"]
[ext_resource type="PackedScene" uid="uid://bpa8swkhcj3b3" path="res://interfaces/Player/pause_game.tscn" id="2_ic0o1"]
[ext_resource type="PackedScene" uid="uid://bonhpunonbj6b" path="res://interfaces/Player/ui_player.tscn" id="2_rj2x4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ftegl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_id4x5"]

[node name="Player" type="CharacterBody3D"]
collision_mask = 15
script = ExtResource("1_3ybdo")

[node name="collisionPLayer" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ftegl")

[node name="Pivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.44178, 0)

[node name="TargetMob" type="RayCast3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.44178, 0)
target_position = Vector3(0, -100, 0)
collision_mask = 2
script = ExtResource("2_0s3jf")

[node name="UIPlayer" parent="." instance=ExtResource("2_rj2x4")]

[node name="PauseGame" parent="." instance=ExtResource("2_ic0o1")]
visible = false

[connection signal="target" from="Pivot/TargetMob" to="." method="_on_target_mob_target"]
[connection signal="paused" from="PauseGame" to="." method="_on_pause_game_paused"]
[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.12887)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_id4x5")
